paginas template e index adicionadas

--- a/ces/src/main/resources/templates/adicionarproduto.html
+++ b/ces/src/main/resources/templates/adicionarproduto.html
@@ -6,11 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <nav></nav><!-- Painel de controle -->
         <div><!-- navegação temporaria-->
             <h3>Indice de acesso temporario</h3>
-            Home |
-            <a th:href="@{/adicionarproduto}">Adicionar produto</a>
+            <a th:href="@{/}"> Home</a> |
+            Adicionar produto |
             <a th:href="@{/retirarproduto}">Retirar produto</a>
         </div>
     </body>
