--- a/ces/src/main/resources/templates/retirarproduto.html
+++ b/ces/src/main/resources/templates/retirarproduto.html
@@ -6,12 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <nav></nav><!-- Painel de controle -->
         <div><!-- navegação temporaria-->
             <h3>Indice de acesso temporario</h3>
-            Home |
-            <a th:href="@{/adicionarproduto}">Adicionar produto</a>
-            <a th:href="@{/retirarproduto}">Retirar produto</a>
+            <a th:href="@{/}"> Home</a> |
+            <a th:href="@{/adicionarproduto}">Adicionar produto</a> |
+            Retirar produto
         </div>
     </body>
 </html>
