--- a/ces/src/main/resources/templates/index.html
+++ b/ces/src/main/resources/templates/index.html
@@ -6,7 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h3>Controle de Estoque Simples</h3><!-- Cabeçalho -->
         <nav></nav><!-- Painel de controle -->
+        <p>Esta pagina mostra a tabela com os produtos</p>
         <div><!-- navegação temporaria-->
             <h3>Indice de acesso temporario</h3>
             Home |
