--- a/ces/src/main/resources/templates/retirarproduto.html
+++ b/ces/src/main/resources/templates/retirarproduto.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h2>Retirar produtos</h2><!-- Cabeçalho -->
         <div><!-- navegação temporaria-->
             <h3>Indice de acesso temporario</h3>
             <a th:href="@{/}"> Home</a> |
