--- a/ces/src/main/resources/templates/cadastrousuario.html
+++ b/ces/src/main/resources/templates/cadastrousuario.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <div><!-- navegação temporaria-->
+            <h3>Indice de acesso temporario</h3>
+            <a th:href="@{/}"> Home</a> |
+            <a th:href="@{/adicionarproduto}">Adicionar produto</a> 
+        </div>
         <div>TODO write content</div>
     </body>
 </html>
