--- a/ces/src/main/resources/templates/userpanel.html
+++ b/ces/src/main/resources/templates/userpanel.html
@@ -7,16 +7,13 @@
     </head>
     <body>
         <h2>Controle de Estoque Simples</h2><!-- Cabeçalho -->
-        <nav><!-- Login -->
-            <form th:action="@{/session/login}" th:object="${usuario}" method="POST"> 
-               <label for="txtUser">Usuario:</label>
-                          <p><input type="text" th:field="${usuario.nome}" id="txtUser" placeholder="admin" /></p>
-                <label for="pswPass">Senha:</label>
-                           <p><input type="password" th:field="${usuario.pass}" id="pswPass" placeholder="pass"/></p>
-               <input type="submit" value="Login" /> 
-            </form>
-            
-        </nav>
+        
+        <div><!-- navegação temporaria-->
+            <h3>Indice de acesso temporario</h3>
+            Home |
+            <a th:href="@{/adicionarproduto}">Adicionar produto</a>
+        </div>
+        
         <h1>Lista de produtos em estoque</h1>
         <table class="table">
             <thead>
