+ cadastro usuarios, login

--- a/ces/src/main/resources/templates/adminpanel.html
+++ b/ces/src/main/resources/templates/adminpanel.html
@@ -8,7 +8,7 @@
     <body>
         <h2>Controle de Estoque Simples - Controle de administrador</h2><!-- Cabeçalho -->
         <div>
-            <a th:href="@{/cadastrousuario}">| Cadastrar novo usuario</a>
+            <a th:href="@{/cadastro/adicionar}">| Cadastrar novo usuario</a>
         </div>
         <br>
         <h1>Usuarios cadastrados</h1>
