--- a/ces/src/main/resources/templates/adminpanel.html
+++ b/ces/src/main/resources/templates/adminpanel.html
@@ -4,8 +4,10 @@
         <title>CES (admin)</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
+                        <div class="container">
         <h2>Controle de Estoque Simples - Controle de administrador</h2><!-- Cabeçalho -->
         <div>
             <a th:href="@{/cadastro/adicionar}">- Cadastrar novo usuario -</a>
@@ -32,5 +34,10 @@
         </table>
          
         </table>
+        
+        
+        <script src="script.js"></script>
+        <script src="jquery.js"></script>
+                        </div>
     </body>
 </html>
