--- a/ces/src/main/resources/templates/cadastrousuario.html
+++ b/ces/src/main/resources/templates/cadastrousuario.html
@@ -4,8 +4,10 @@
         <title>Registrar usuario</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
+                        <div class="container">
         <div>
             <h1>Registrar novo usuario</h1>
         <form th:action="@{/cadastro/criar}" th:object="${usuario}" method="POST">
@@ -17,5 +19,10 @@
         </div>
         <div>
         </div>
+        
+        
+        <script src="script.js"></script>
+        <script src="jquery.js"></script>
+                        </div>
     </body>
 </html>
