--- a/ces/src/main/resources/templates/editarproduto.html
+++ b/ces/src/main/resources/templates/editarproduto.html
@@ -4,8 +4,10 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
+                        <div class="container">
         <h2>Retirar produtos</h2><!-- Cabeçalho -->
         <div><!-- navegação temporaria-->
             <h3>Indice de acesso temporario</h3>
@@ -19,5 +21,10 @@
         <p>Estoque: <span th:text="${produto.quantidade}"/></p>
         <p>Descrição: <span th:text="${produto.descricao}"/></p>
         <a th:href="@{'/excluirproduto?id=' + ${produto.id}}">Remover produto do banco!</a>
+        
+        
+        <script src="script.js"></script>
+        <script src="jquery.js"></script>
+                        </div>
     </body>
 </html>
