--- a/ces/src/main/resources/templates/index.html
+++ b/ces/src/main/resources/templates/index.html
@@ -3,40 +3,45 @@
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <h2>Controle de Estoque Simples</h2><!-- Cabeçalho -->
-        <nav><!-- Login -->
-            <form th:action="@{/session/login}" th:object="${usuario}" method="POST"> 
-               <label for="txtUser">Usuario:</label>
-                          <p><input type="text" th:field="${usuario.nome}" id="txtUser" placeholder="admin" /></p>
-                <label for="pswPass">Senha:</label>
-                           <p><input type="password" th:field="${usuario.pass}" id="pswPass" placeholder="pass"/></p>
-               <input type="submit" value="Login" /> 
-            </form>
-            
-        </nav>
-        <h1>Lista de produtos em estoque</h1>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nome</th>
-                    <th>Quantidade</th>
-                    <th>Descrição</th>
-                    <th>Detalhes</th>
-                </tr>
-            </thead>
-             <tbody>
-                <tr th:each="produto : ${produtos}">
-                    <td th:text="${produto.id}"></td>
-                    <td th:text="${produto.nome}"></td>
-                    <td th:text="${produto.quantidade}"></td>
-                    <td th:text="${produto.descricao}"></td>
-                </tr>
-            </tbody>
-         
-        </table>
-    </body>
-</html>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+                    </head>
+                    <body>
+                        <div class="container">
+                            <h2>Controle de Estoque Simples</h2><!-- Cabeçalho -->
+                            <nav><!-- Login -->
+                                <form th:action="@{/session/login}" th:object="${usuario}" method="POST"> 
+                                    <label for="txtUser">Usuario:</label>
+                                               <p><input type="text" th:field="${usuario.nome}" id="txtUser" placeholder="admin" /></p>
+                                    <label for="pswPass">Senha:</label>
+                                               <p><input type="password" th:field="${usuario.pass}" id="pswPass" placeholder="pass"/></p>
+                                               <input type="submit" value="Login" /> 
+                                            </form>
+
+                            </nav>
+                            <h1>Lista de produtos em estoque</h1>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Nome</th>
+                                        <th>Quantidade</th>
+                                        <th>Descrição</th>
+                                        <th>Detalhes</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="produto : ${produtos}">
+                                        <td th:text="${produto.id}"></td>
+                                        <td th:text="${produto.nome}"></td>
+                                        <td th:text="${produto.quantidade}"></td>
+                                        <td th:text="${produto.descricao}"></td>
+                                    </tr>
+                                </tbody>
+
+                            </table>
+                            <script src="script.js"></script>
+                            <script src="jquery.js"></script>
+                        </div>
+                    </body>
+                    </html>
