--- a/ces/src/main/resources/templates/userpanel.html
+++ b/ces/src/main/resources/templates/userpanel.html
@@ -4,8 +4,10 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
+                        <div class="container">
         <h2>Controle de Estoque Simples</h2><!-- Cabeçalho -->
         
         <div><!-- navegação temporaria-->
@@ -36,5 +38,10 @@
             </tbody>
          
         </table>
+        
+        
+        <script src="script.js"></script>
+        <script src="jquery.js"></script>
+                        </div>
     </body>
 </html>
