--- a/ces/src/main/resources/templates/adicionarproduto.html
+++ b/ces/src/main/resources/templates/adicionarproduto.html
@@ -17,7 +17,7 @@
             <p>Nome: <input type="text" th:field="${produto.nome}"/></p>
             <p>Descrição do produto: <input type="text" th:field="${produto.descricao}"/></p>
             <p>Quantidade: <input type="number" th:field="${produto.quantidade}"/></p>
-            <p><input type="submit" value="Adicionar filme"/></p>
+            <p><input type="submit" value="Adicionar produto"/></p>
         </form>
     </body>
 </html>
