--- a/ces/src/main/resources/templates/straptemplate.html
+++ b/ces/src/main/resources/templates/straptemplate.html
@@ -19,13 +19,19 @@
     </div>
 
     <div class="col-10">
-      <h3>
-        CONTROLE DE ESTOQUE SIMPLES
-      </h3>
+      <p class="h1">
+        Controle de Estoque Simples
+      </p>
     </div>
   </div>
-  <div class="row"> <!--- painel de controle e tabela a direita-->
-    
+  <div class="row"> <!--- painel de controle e tabela de conteudos-->
+    <div class="col-2" style="background-color: aquamarine;height: 500px;"><!-- Painel de controle -->
+
+    </div>
+    <div class="col-10"><!-- Tabela de conteudos-->
+
+    </div>
+
   </div>
   
   <div class="row" style="height:20px;margin-top:30px;text-align: center;"> <!--spacing row-->
