--- a/ces/src/main/resources/templates/adicionarproduto.html
+++ b/ces/src/main/resources/templates/adicionarproduto.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-                        <div class="container">
-        <h2>Adicionar produtos</h2><!-- Cabeçalho -->
-        <div><!-- navegação temporaria-->
-            <h3>Indice de acesso temporario</h3>
-            <a th:href="@{/}"> Home</a> |
-            Adicionar produto 
+
+<head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <div class="row"><!-- header  row-->
+            <div class="col-2">
+                <img src="img/ces.png" alt="logo" style="height: auto;width: 80%;">
+            </div>
+
+            <div class="col-10">
+                <h2 style="text-align: left; align-items: center;margin-top: 5%;">Controle de Estoque Simples</h2>
+            </div>
+        </div><!-- header row -->
+        <div class="row">
+            <div class="col-2" style="padding: 10px;"><!-- painel -->
+                <h3>Ações</h3>
+                <a th:href="@{/}" class="btn btn-primary">Home</a>
+            </div><!--painel-->
+            <div class="col-10" style="padding: 10px;"> <!--conteudo-->
+                <h3>Adicionar Produto ao estoque</h3>
+                <form th:action="@{/registrarproduto}" th:object="${produto}" method="POST">
+                    <p>Nome: <input type="text" th:field="${produto.nome}" onkeyup="checkIfEmpty()"
+                            id="nomeInputField" /></p>
+                    <p>Descrição do produto: <input type="text" th:field="${produto.descricao}" /></p>
+                    <p>Quantidade: <input type="number" th:field="${produto.quantidade}" /></p>
+                    <p><input type="submit" value="Adicionar produto" class="btn btn-success" id="botaoCadastrar"
+                            disabled /></p>
+                </form>
+            </div>
         </div>
-        <h1>Adicionar Produto ao estoque</h1>
-        <form th:action="@{/registrarproduto}" th:object="${produto}" method="POST">
-            <p>Nome: <input type="text" th:field="${produto.nome}"/></p>
-            <p>Descrição do produto: <input type="text" th:field="${produto.descricao}"/></p>
-            <p>Quantidade: <input type="number" th:field="${produto.quantidade}"/></p>
-            <p><input type="submit" value="Adicionar produto"/></p>
-        </form>
-        
-        
-        <script src="script.js"></script>
+
+        <script src="generic.js"></script>
         <script src="jquery.js"></script>
-                        </div>
-    </body>
+    </div>
+</body>
+
 </html>
