--- a/ces/src/main/resources/templates/cadastrousuario.html
+++ b/ces/src/main/resources/templates/cadastrousuario.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Registrar usuario</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-                        <div class="container">
+
+<head>
+    <title>Registrar usuario</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
         <div>
-            <h1>Registrar novo usuario</h1>
-        <form th:action="@{/cadastro/criar}" th:object="${usuario}" method="POST">
-            <p>Nome: <input type="text" th:field="${usuario.nome}"/></p>
-            <p>Senha: <input type="text" th:field="${usuario.pass}"/></p>
-            <!--<p>Nivel de acesso: <input type="text" th:field="${produto.acesso}"/></p>-->
-            <p><input type="submit" value="Registrar usuario"/></p>
-        </form>
+            <div class="row" style="padding: 10px;"><!-- header  row-->
+                <div class="col-2">
+                    <img src="../img/ces.png" alt="logo" style="height: auto;width: 80%;">
+                </div>
+
+                <div class="col-10">
+                    <h2 style="text-align: left; align-items: center;margin-top: 5%;">Controle de Estoque Simples</h2>
+                </div>
+            </div><!-- header row -->
+            <div class="row">
+                <div class="col-2" style="padding: 10px;"><!-- painel -->
+                    <h3>Ações</h3>
+                    <a th:href="@{/}" class="btn btn-primary">Home</a>
+                </div><!--painel-->
+                <div class="col-10">
+                    <form th:action="@{/cadastro/criar}" th:object="${usuario}" method="POST">
+                        <p>Nome*: <input type="text" th:field="${usuario.nome}" onkeyup="checkIfEmpty()" id="nomeInputField"/></p>
+                        <p>Senha: <input type="text" th:field="${usuario.pass}" /></p>
+                        <!--<p>Nivel de acesso: <input type="text" th:field="${produto.acesso}"/></p>-->
+                        <p><input type="submit" value="Registrar usuario" id="botaoCadastrar" disabled/></p>
+                    </form>
+                </div>
+            </div>
         </div>
         <div>
         </div>
-        
-        
-        <script src="script.js"></script>
-        <script src="jquery.js"></script>
-                        </div>
-    </body>
+
+
+        <script src="../generic.js"></script>
+        <script src="../jquery.js"></script>
+    </div>
+</body>
+
 </html>
