--- a/ces/src/main/resources/templates/editarproduto.html
+++ b/ces/src/main/resources/templates/editarproduto.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-                        <div class="container">
-        <h2>Retirar produtos</h2><!-- Cabeçalho -->
-        <div><!-- navegação temporaria-->
-            <h3>Indice de acesso temporario</h3>
-            <a th:href="@{/}"> Home</a> |
-            <a th:href="@{/adicionarproduto}">Adicionar produto</a> |
-            Editar produto
+
+<head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <div class="row"><!-- header  row-->
+            <div class="col-2">
+                <img src="img/ces.png" alt="logo" style="height: auto;width: 80%;">
+            </div>
+
+            <div class="col-10">
+                <h2 style="text-align: left; align-items: center;margin-top: 5%;">Controle de Estoque Simples</h2>
+            </div>
+        </div><!-- header row -->
+        <div class="row">
+            <div class="col-2"><!-- painel-->
+                <h3>Ações</h3>
+                <a th:href="@{/}" class="btn btn-primary">Home</a>
+            </div>
+            <div class="col-10"> <!--conteudo-->
+                <h3>Detalhes do produto</h3>
+                <p>Id: <span th:text="${produto.id}" /></p>
+                <p>Nome: <span th:text="${produto.nome}" /></p>
+                <p>Estoque: <span th:text="${produto.quantidade}" /></p>
+                <p>Descrição: <span th:text="${produto.descricao}" /></p>
+                <br>
+                <!-- fix this 
+                <form class="form-control" th:action="@{'/atualizarproduto?id=' + ${produto.id}}" th:object="${produto}" method="GET">
+                    <p>Quantidade: <input type="number" name="newqtd" placeholder="${produto.quantidade}"/></p>
+                    <p><input type="submit" value="Editar produto" class="btn btn-success"/></p>
+                </form>
+                -->
+
+                <a th:href="@{'/excluirproduto?id=' + ${produto.id}}" class="btn btn-danger">Deletar</a>
+            </div>
         </div>
-        <h2>Detalhes do produto</h2>
-        <p>Id: <span th:text="${produto.id}"/></p>
-        <p>Nome: <span th:text="${produto.nome}"/></p>
-        <p>Estoque: <span th:text="${produto.quantidade}"/></p>
-        <p>Descrição: <span th:text="${produto.descricao}"/></p>
-        <a th:href="@{'/excluirproduto?id=' + ${produto.id}}">Remover produto do banco!</a>
-        
-        
-        <script src="script.js"></script>
+
+
+        <script src="generic.js"></script>
         <script src="jquery.js"></script>
-                        </div>
-    </body>
+    </div>
+</body>
+
 </html>
