--- a/ces/src/main/resources/templates/index.html
+++ b/ces/src/main/resources/templates/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-                    </head>
-                    <body>
-                        <div class="container">
-                            <h2>Controle de Estoque Simples</h2><!-- Cabeçalho -->
-                            <nav><!-- Login -->
-                                <form th:action="@{/session/login}" th:object="${usuario}" method="POST"> 
-                                    <label for="txtUser">Usuario:</label>
-                                               <p><input type="text" th:field="${usuario.nome}" id="txtUser" placeholder="admin" /></p>
-                                    <label for="pswPass">Senha:</label>
-                                               <p><input type="password" th:field="${usuario.pass}" id="pswPass" placeholder="pass"/></p>
-                                               <input type="submit" value="Login" /> 
-                                            </form>
 
-                            </nav>
-                            <h1>Lista de produtos em estoque</h1>
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Nome</th>
-                                        <th>Quantidade</th>
-                                        <th>Descrição</th>
-                                        <th>Detalhes</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr th:each="produto : ${produtos}">
-                                        <td th:text="${produto.id}"></td>
-                                        <td th:text="${produto.nome}"></td>
-                                        <td th:text="${produto.quantidade}"></td>
-                                        <td th:text="${produto.descricao}"></td>
-                                    </tr>
-                                </tbody>
+<head>
+    <title>Controle de Estoque Simples</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
 
-                            </table>
-                            <script src="script.js"></script>
-                            <script src="jquery.js"></script>
-                        </div>
-                    </body>
-                    </html>
+<body>
+    <div class="container">
+        <div class="row"><!-- header  row-->
+            <div class="col-2">
+                <img src="img/ces.png" alt="logo" style="height: auto;width: 80%;">
+            </div>
+
+            <div class="col-10"> 
+                <h2 style="text-align: left; align-items: center;margin-top: 5%;">Controle de Estoque Simples</h2>
+            </div>
+        </div><!-- header row -->
+        <div class="row">
+            <div class="col-2" style="padding: 10px;"> <!-- painel-->
+
+                <nav><!-- Login -->
+                    <form class="form-control" th:action="@{/session/login}" th:object="${usuario}" method="POST" style="width: 100%;">
+                        <label for="txtUser">Usuario:</label>
+                        <p><input type="text" th:field="${usuario.nome}" id="txtUser" placeholder="admin" /></p>
+                        <label for="pswPass">Senha:</label>
+                        <p><input type="password" th:field="${usuario.pass}" id="pswPass" placeholder="pass" /></p>
+                        <input type="submit" value="Login" class="btn btn-primary"/>
+                    </form>
+                </nav><!-- fim login -->
+            </div><!-- fim painel -->
+
+            <div class="col-10" style="padding: 10px;"> <!--conteudos-->
+                <h3>Produtos em estoque</h3>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nome</th>
+                            <th>Quantidade</th>
+                            <th>Descrição</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="produto : ${produtos}">
+                            <td th:text="${produto.id}"></td>
+                            <td th:text="${produto.nome}"></td>
+                            <td th:text="${produto.quantidade}"></td>
+                            <td th:text="${produto.descricao}"></td>
+                        </tr>
+                    </tbody>
+
+                </table>
+            </div> <!-- fim conteudos -->
+        </div>
+        <script src="generic.js"></script>
+        <script src="jquery.js"></script>
+    </div>
+</body>
+
+</html>
