--- a/ces/src/main/resources/templates/userpanel.html
+++ b/ces/src/main/resources/templates/userpanel.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-                        <div class="container">
-        <h2>Controle de Estoque Simples</h2><!-- Cabeçalho -->
-        
-        <div><!-- navegação temporaria-->
-            <h3>Indice de acesso temporario</h3>
-            Home |
-            <a th:href="@{/adicionarproduto}">Adicionar produto</a>
+
+<head>
+    <title>Controle de Estoque Simples</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <div class="row"><!-- header  row-->
+            <div class="col-2">
+                <img src="img/ces.png" alt="logo" style="height: auto;width: 80%;">
+            </div>
+
+            <div class="col-10">
+                <h2 style="text-align: left; align-items: center;margin-top: 5%;">Controle de Estoque Simples</h2>
+            </div>
+        </div><!-- header row -->
+
+        <div class="row">
+            <div class="col-2" style="padding: 10px;"><!-- painel -->
+                <h3>Ações</h3>
+                <a th:href="@{/adicionarproduto}" class="btn btn-primary">Adicionar produto</a>
+            </div><!--painel-->
+            <div class="col-10" style="padding: 10px;"><!--conteudo-->
+                <h3>Lista de produtos em estoque</h3>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nome</th>
+                            <th>Quantidade</th>
+                            <th>Descrição</th>
+                            <th>Editar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="produto : ${produtos}">
+                            <td th:text="${produto.id}"></td>
+                            <td th:text="${produto.nome}"></td>
+                            <td th:text="${produto.quantidade}"></td>
+                            <td th:text="${produto.descricao}"></td>
+                            <td><a th:href="@{'/editarproduto?id=' + ${produto.id}}" class="btn btn-secondary">Detalhes</a></td>
+                            
+                        </tr>
+                    </tbody>
+
+                </table>
+            </div><!--conteudo-->
         </div>
-        
-        <h1>Lista de produtos em estoque</h1>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nome</th>
-                    <th>Quantidade</th>
-                    <th>Descrição</th>
-                    <th>Detalhes</th>
-                </tr>
-            </thead>
-             <tbody>
-                <tr th:each="produto : ${produtos}">
-                    <td th:text="${produto.id}"></td>
-                    <td th:text="${produto.nome}"></td>
-                    <td th:text="${produto.quantidade}"></td>
-                    <td th:text="${produto.descricao}"></td>
-                    <td><a th:href="@{'/editarproduto?id=' + ${produto.id}}">+ Detalhes</a></td><!-- placeholder-->
-                </tr>
-            </tbody>
-         
-        </table>
-        
-        
-        <script src="script.js"></script>
+
+        <script src="generic.js"></script>
         <script src="jquery.js"></script>
-                        </div>
-    </body>
+    </div>
+</body>
+
 </html>
